# procedural-workshop

./: CMakeLists.txt  README.md  balls.cpp  frac.h  utils.cpp
homework1/: another_equantion.cpp  arithmetic.cpp  equantion.cpp  lamp.cpp  name.cpp
homework2/: function.cpp  function2.cpp  konus.cpp  order.cpp  tabulation.cpp
homework3/: char_sort.cpp  filter_file.cpp  print_file.cpp  ssuda.cpp  zaem.cpp
homework4/: figures.cpp  file_droch.cpp  matrix_multiplication.cpp  number_sign.cpp  past_glory.cpp  rand_gen.cpp  roman_numerals.cpp
homework5/: digit_sum.cpp  euclid.cpp  files.cpp  map_ascii.cpp  replace_spaces.cpp  rows_1.cpp  rows_2.cpp  sieve.cpp  sinus.cpp
inputs/: filter_file.txt  replace.txt
